header part completed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
 
     <main>
         <header>
-            <div></div>
-            <div></div>
+            <div>
+                <h1>
+                    <span>Rock</span>
+                    <span>Paper</span>
+                    <span>Scissor</span>
+                </h1>
+            </div>
+            <div>
+                <p><strong>Computer: </strong><span id="computer-scr">0</span></p>
+                <p><strong>User: </strong> <span id="user-scr">0</span></p>
+            </div>
         </header>
         <section>
             <button></button>
@@ -26,7 +35,7 @@
             <p></p>
             <p></p>
             <div>
-                
+
             </div>
         </section>
     </main>
