--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <p><strong>Computer: </strong><span id="computer-scr">0</span></p>
-                <p><strong>User: </strong> <span id="user-scr">0</span></p>
+                <p><strong>You: </strong> <span id="user-scr">0</span></p>
             </div>
         </header>
         <section class="hands hidden">
